--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi Primera Web</title>
+    <title>Anibal Max</title>
     <link rel="stylesheet" href="styles3.css" />
     <script
       src="https://kit.fontawesome.com/534c12cb1d.js"
@@ -43,11 +43,11 @@
             <i class="fa-solid fa-bars"></i>
           </label>
           <ul class="menu">
-            <li><a href="#">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="#">Acerca de mí</a></li>
             <li><a href="#">Trabajos</a></li>
             <li><a href="#">Servicios</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="http://bit.ly/ingeniero_Max">Contacto</a></li>
           </ul>
         </nav>
       </header>
@@ -141,9 +141,9 @@
         <h3>Redes Sociales</h3>
         <ul class="redes">
           <li><a href="#">Contacto</a></li>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Faceook</a></li>
-          <li><a href="#">Linkedin</a></li>
+          <li><a href="https://www.instagram.com/jesusanibalmaxdiaz/">Instagram</a></li>
+          <li><a href="https://www.facebook.com/jesusanibal.maxdiaz/">Faceook</a></li>
+          <li><a href="https://www.linkedin.com/in/jesus-an%C3%ADbal-max-d%C3%ADaz-024326270/">Linkedin</a></li>
         </ul>
       </footer>
     </div>
